plugins {
	id 'java'
	id 'jvm-test-suite'
	id 'org.springframework.boot' version '3.4.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

//bootJar {
//	enabled = false
//}
//
//jar {
//	enabled = true
//}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

allprojects {
	group = 'com.example'
	version = '1.0.0'
	java {
		sourceCompatibility = JavaVersion.VERSION_21
	}

	repositories {
		mavenCentral()
	}
}

subprojects {
	apply plugin: 'java'
	apply plugin: 'java-library'
	apply plugin: 'org.springframework.boot'
	apply plugin: 'io.spring.dependency-management'

	dependencies {
		implementation 'org.springframework.boot:spring-boot-starter'

		testImplementation 'org.springframework.boot:spring-boot-starter-test'
		testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
		testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

		compileOnly 'org.projectlombok:lombok'
		annotationProcessor 'org.projectlombok:lombok'
	}
}

tasks.named('test') {
	useJUnitPlatform()
	testFramework {
		useJUnit()
	}
}

//test {
//	useJUnitPlatform()
//	testFramework {
//		useJUnit()
//	}
//}
